Adding new fields to entities