@@ -1,5 +1,6 @@
 package com.codebangers.backend.course.controller;
 
+import com.codebangers.backend.config.exception.ResourceNotFoundException;
 import com.codebangers.backend.course.dto.EnrollmentRequest;
 import com.codebangers.backend.course.dto.EnrollmentResponse;
 import com.codebangers.backend.course.model.Enrollment;
@@ -7,17 +8,19 @@ import com.codebangers.backend.course.model.Enrollment.PaymentStatus;
 import com.codebangers.backend.course.service.EnrollmentService;
 import com.codebangers.backend.user.model.User;
 import com.codebangers.backend.user.service.UserService;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/enrollments")
-@CrossOrigin(origins = "*")
 public class EnrollmentController {
 
     private final EnrollmentService enrollmentService;
@@ -37,62 +40,63 @@ public class EnrollmentController {
 
     @GetMapping("/course/{courseId}")
     public ResponseEntity<List<EnrollmentResponse>> getEnrollmentsByCourse(@PathVariable UUID courseId) {
-        List<Enrollment> enrollments = enrollmentService.getEnrollmentsByCourse(courseId);
-        List<EnrollmentResponse> responses = enrollments.stream()
+        List<EnrollmentResponse> responses = enrollmentService.getEnrollmentsByCourse(courseId).stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(responses);
     }
 
     @GetMapping("/user/{userId}")
     public ResponseEntity<List<EnrollmentResponse>> getEnrollmentsByUser(@PathVariable UUID userId) {
-        List<Enrollment> enrollments = enrollmentService.getEnrollmentsByUser(userId);
-        List<EnrollmentResponse> responses = enrollments.stream()
+        List<EnrollmentResponse> responses = enrollmentService.getEnrollmentsByUser(userId).stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
+        return ResponseEntity.ok(responses);
+    }
+
+    @GetMapping("/me")
+    public ResponseEntity<List<EnrollmentResponse>> getMyEnrollments(@AuthenticationPrincipal Jwt jwt) {
+        User user = resolveUser(jwt);
+        List<EnrollmentResponse> responses = enrollmentService.getEnrollmentsByUser(user.getId()).stream()
+            .map(this::mapToResponse)
+            .toList();
         return ResponseEntity.ok(responses);
     }
 
     @PostMapping
-    public ResponseEntity<?> enrollUserInCourse(@RequestBody EnrollmentRequest request) {
-        try {
-            User user = userService.getUserById(request.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
-            Enrollment enrollment = enrollmentService.enrollUserInCourse(user, request.getCourseId());
-            return new ResponseEntity<>(mapToResponse(enrollment), HttpStatus.CREATED);
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<EnrollmentResponse> enrollCurrentUser(@Valid @RequestBody EnrollmentRequest request,
+                                                                 @AuthenticationPrincipal Jwt jwt) {
+        User user = resolveUser(jwt);
+        Enrollment enrollment = enrollmentService.enrollUserInCourse(user, request.getCourseId());
+        return new ResponseEntity<>(mapToResponse(enrollment), HttpStatus.CREATED);
     }
 
     @PutMapping("/{id}/payment-status")
-    public ResponseEntity<?> updatePaymentStatus(@PathVariable UUID id, @RequestParam PaymentStatus status) {
-        try {
-            Enrollment enrollment = enrollmentService.updatePaymentStatus(id, status);
-            return ResponseEntity.ok(mapToResponse(enrollment));
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<EnrollmentResponse> updatePaymentStatus(@PathVariable UUID id,
+                                                                    @RequestParam PaymentStatus status) {
+        Enrollment enrollment = enrollmentService.updatePaymentStatus(id, status);
+        return ResponseEntity.ok(mapToResponse(enrollment));
     }
 
     @PutMapping("/{id}/progress")
-    public ResponseEntity<?> updateProgress(@PathVariable UUID id, @RequestParam Integer progress) {
-        try {
-            Enrollment enrollment = enrollmentService.updateProgress(id, progress);
-            return ResponseEntity.ok(mapToResponse(enrollment));
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<EnrollmentResponse> updateProgress(@PathVariable UUID id,
+                                                              @RequestParam Integer progress) {
+        Enrollment enrollment = enrollmentService.updateProgress(id, progress);
+        return ResponseEntity.ok(mapToResponse(enrollment));
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> deleteEnrollment(@PathVariable UUID id) {
-        try {
-            enrollmentService.deleteEnrollment(id);
-            return ResponseEntity.noContent().build();
-        } catch (Exception e) {
-            return ResponseEntity.notFound().build();
-        }
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Void> deleteEnrollment(@PathVariable UUID id) {
+        enrollmentService.deleteEnrollment(id);
+        return ResponseEntity.noContent().build();
+    }
+
+    private User resolveUser(Jwt jwt) {
+        String email = jwt.getSubject();
+        return userService.getUserByEmail(email)
+            .orElseThrow(() -> new ResourceNotFoundException("User", email));
     }
 
     private EnrollmentResponse mapToResponse(Enrollment enrollment) {
