@@ -1,6 +1,7 @@
 package com.codebangers.backend.user.controller;
 
 import com.codebangers.backend.config.JwtService;
+import com.codebangers.backend.config.exception.ResourceNotFoundException;
 import com.codebangers.backend.user.dto.AuthResponse;
 import com.codebangers.backend.user.dto.LoginRequest;
 import com.codebangers.backend.user.dto.UserRequest;
@@ -12,11 +13,12 @@ import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
@@ -31,40 +33,31 @@ public class UserController {
     }
 
     @PostMapping("/register")
-    public ResponseEntity<?> register(@Valid @RequestBody UserRequest request) {
-        try {
-            User user = new User(
-                request.getUserName(),
-                request.getFirstName(),
-                request.getLastName(),
-                request.getEmail(),
-                request.getPassword(),
-                Role.USER
-            );
-            User createdUser = userService.createUser(user);
-            return new ResponseEntity<>(mapToAuthResponse(createdUser, "User registered successfully"), HttpStatus.CREATED);
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<AuthResponse> register(@Valid @RequestBody UserRequest request) {
+        User user = new User(
+            request.getUserName(),
+            request.getFirstName(),
+            request.getLastName(),
+            request.getEmail(),
+            request.getPassword(),
+            Role.USER
+        );
+        User createdUser = userService.createUser(user);
+        return new ResponseEntity<>(mapToAuthResponse(createdUser, "User registered successfully"), HttpStatus.CREATED);
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@Valid @RequestBody LoginRequest request) {
-        try {
-            User user = userService.authenticateUser(request.getEmail(), request.getPassword());
-            return ResponseEntity.ok(mapToAuthResponse(user, "Login successful"));
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(e.getMessage());
-        }
+    public ResponseEntity<AuthResponse> login(@Valid @RequestBody LoginRequest request) {
+        User user = userService.authenticateUser(request.getEmail(), request.getPassword());
+        return ResponseEntity.ok(mapToAuthResponse(user, "Login successful"));
     }
 
     @GetMapping
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<UserResponse>> getAllUsers() {
-        List<User> users = userService.getAllUsers();
-        List<UserResponse> responses = users.stream()
+        List<UserResponse> responses = userService.getAllUsers().stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(responses);
     }
 
@@ -76,24 +69,38 @@ public class UserController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateUser(@PathVariable UUID id, @RequestBody UserRequest request) {
-        try {
-            User user = userService.updateUser(id, request);
-            return ResponseEntity.ok(mapToResponse(user));
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<UserResponse> updateUser(@PathVariable UUID id, @Valid @RequestBody UserRequest request) {
+        User user = userService.updateUser(id, request);
+        return ResponseEntity.ok(mapToResponse(user));
     }
 
     @DeleteMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<?> softDeleteUser(@PathVariable UUID id) {
-        try {
-            userService.softDeleteUser(id);
-            return ResponseEntity.noContent().build();
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.notFound().build();
-        }
+    public ResponseEntity<Void> softDeleteUser(@PathVariable UUID id, @AuthenticationPrincipal Jwt jwt) {
+        User admin = resolveUser(jwt);
+        userService.softDeleteUser(id, admin);
+        return ResponseEntity.noContent().build();
+    }
+
+    @PutMapping("/{id}/block")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Void> blockUser(@PathVariable UUID id, @AuthenticationPrincipal Jwt jwt) {
+        User admin = resolveUser(jwt);
+        userService.blockUser(id, admin);
+        return ResponseEntity.noContent().build();
+    }
+
+    @PutMapping("/{id}/unblock")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Void> unblockUser(@PathVariable UUID id) {
+        userService.unblockUser(id);
+        return ResponseEntity.noContent().build();
+    }
+
+    private User resolveUser(Jwt jwt) {
+        String email = jwt.getSubject();
+        return userService.getUserByEmail(email)
+            .orElseThrow(() -> new ResourceNotFoundException("User", email));
     }
 
     private UserResponse mapToResponse(User user) {
@@ -110,7 +117,7 @@ public class UserController {
     }
 
     private AuthResponse mapToAuthResponse(User user, String message) {
-        AuthResponse response = new AuthResponse(
+        return new AuthResponse(
             user.getId(),
             user.getUserName(),
             user.getEmail(),
@@ -118,6 +125,5 @@ public class UserController {
             message,
             jwtService.generateToken(user)
         );
-        return response;
     }
 }
