@@ -1,52 +1,56 @@
 package com.codebangers.backend.workshop.controller;
 
+import com.codebangers.backend.config.exception.ResourceNotFoundException;
+import com.codebangers.backend.user.model.User;
+import com.codebangers.backend.user.service.UserService;
 import com.codebangers.backend.workshop.dto.WorkshopRequest;
 import com.codebangers.backend.workshop.dto.WorkshopResponse;
 import com.codebangers.backend.workshop.model.Workshop;
 import com.codebangers.backend.workshop.service.WorkshopService;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/workshops")
-@CrossOrigin(origins = "*")
 public class WorkshopController {
 
     private final WorkshopService workshopService;
+    private final UserService userService;
 
-    public WorkshopController(WorkshopService workshopService) {
+    public WorkshopController(WorkshopService workshopService, UserService userService) {
         this.workshopService = workshopService;
+        this.userService = userService;
     }
 
     @GetMapping
     public ResponseEntity<List<WorkshopResponse>> getAllActiveWorkshops() {
-        List<Workshop> workshops = workshopService.getAllActiveWorkshops();
-        List<WorkshopResponse> responses = workshops.stream()
+        List<WorkshopResponse> responses = workshopService.getAllActiveWorkshops().stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(responses);
     }
 
     @GetMapping("/upcoming")
     public ResponseEntity<List<WorkshopResponse>> getUpcomingWorkshops() {
-        List<Workshop> workshops = workshopService.getUpcomingWorkshops();
-        List<WorkshopResponse> responses = workshops.stream()
+        List<WorkshopResponse> responses = workshopService.getUpcomingWorkshops().stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(responses);
     }
 
     @GetMapping("/ongoing")
     public ResponseEntity<List<WorkshopResponse>> getOngoingWorkshops() {
-        List<Workshop> workshops = workshopService.getOngoingWorkshops();
-        List<WorkshopResponse> responses = workshops.stream()
+        List<WorkshopResponse> responses = workshopService.getOngoingWorkshops().stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(responses);
     }
 
@@ -58,47 +62,45 @@ public class WorkshopController {
     }
 
     @PostMapping
-    public ResponseEntity<?> createWorkshop(@RequestBody WorkshopRequest request) {
-        try {
-            if (request.getTitle() == null || request.getTitle().isBlank()) {
-                return ResponseEntity.badRequest().body("Workshop title is required");
-            }
-            Workshop workshop = workshopService.createWorkshop(
-                request.getTitle(),
-                request.getDescription(),
-                request.getStartDate(),
-                request.getEndDate()
-            );
-            return new ResponseEntity<>(mapToResponse(workshop), HttpStatus.CREATED);
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    @PreAuthorize("hasAnyRole('TEACHER', 'ADMIN')")
+    public ResponseEntity<WorkshopResponse> createWorkshop(@Valid @RequestBody WorkshopRequest request,
+                                                            @AuthenticationPrincipal Jwt jwt) {
+        User creator = resolveUser(jwt);
+        Workshop workshop = workshopService.createWorkshop(
+            request.getTitle(),
+            request.getDescription(),
+            request.getStartDate(),
+            request.getEndDate(),
+            creator
+        );
+        return new ResponseEntity<>(mapToResponse(workshop), HttpStatus.CREATED);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateWorkshop(@PathVariable UUID id, @RequestBody WorkshopRequest request) {
-        try {
-            Workshop workshop = workshopService.updateWorkshop(
-                id,
-                request.getTitle(),
-                request.getDescription(),
-                request.getStartDate(),
-                request.getEndDate()
-            );
-            return ResponseEntity.ok(mapToResponse(workshop));
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    @PreAuthorize("hasAnyRole('TEACHER', 'ADMIN')")
+    public ResponseEntity<WorkshopResponse> updateWorkshop(@PathVariable UUID id,
+                                                            @Valid @RequestBody WorkshopRequest request) {
+        Workshop workshop = workshopService.updateWorkshop(
+            id,
+            request.getTitle(),
+            request.getDescription(),
+            request.getStartDate(),
+            request.getEndDate()
+        );
+        return ResponseEntity.ok(mapToResponse(workshop));
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> softDeleteWorkshop(@PathVariable UUID id) {
-        try {
-            workshopService.softDeleteWorkshop(id);
-            return ResponseEntity.noContent().build();
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.notFound().build();
-        }
+    @PreAuthorize("hasAnyRole('TEACHER', 'ADMIN')")
+    public ResponseEntity<Void> softDeleteWorkshop(@PathVariable UUID id) {
+        workshopService.softDeleteWorkshop(id);
+        return ResponseEntity.noContent().build();
+    }
+
+    private User resolveUser(Jwt jwt) {
+        String email = jwt.getSubject();
+        return userService.getUserByEmail(email)
+            .orElseThrow(() -> new ResourceNotFoundException("User", email));
     }
 
     private WorkshopResponse mapToResponse(Workshop workshop) {
